kubernetes/igress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceramic-api
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - ceramic.viaheadline.xyz
      secretName: ceramic-node-two-tls
  rules:
    - host: ceramic.viaheadline.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ceramic-node
                port:
                  number: 7007
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceramic-ipfs
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - ceramic-ipfs.viaheadline.xyz
      secretName: ceramic-ipfs-node-tls
  rules:
    - host: ceramic-ipfs.viaheadline.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ceramic-ipfs
                port:
                  number: 4012
